# e-commerce-data-pipeline

./: README.md  pipeline_usage.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: blank.yml  pipeline_test.yml
src/ecommerce/: __init__.py  job_run.py
src/ecommerce/conf/: config-CH.yml  config.yml
src/ecommerce/data_schema/: base_schema.py  customer.py  customer_product_orders.py  order_items.py  order_payments.py  order_reviews.py  orders.py  product.py
src/ecommerce/dataflow/landing/: base_loader.py
src/ecommerce/dataflow/landing/agg/: customer_product_order_loader.py
src/ecommerce/dataflow/landing/raw/: customer_loader.py  order_items_loader.py  order_loader.py  order_payments_loader.py  order_reviews_loader.py  product_loader.py
src/ecommerce/dataflow/pipeline/: base_pipeline.py  sales_data_pipeline.py
src/ecommerce/dataflow/sink/: base_sink.py  spark_sink.py
src/ecommerce/engine/: spark_engine.py
src/ecommerce/env/: config_info.py  environment.py
src/ecommerce/ml/: sales_forecast.py
src/test/ecommerce/unit/: test_data_objects.py  test_data_pipeline.py
